Tue Dec 22 05:39:58 2015  Takashi Kokubun  <takashikkbn@gmail.com>

	* ext/cgi/escape/escape.c (preserve_original_state): Preserve
	  original state for tainted and frozen.  [Fix GH-1166]
	  [ruby-dev:49451] [Bug #11855]

Tue Dec 22 03:57:20 2015  Eric Wong  <e@80x24.org>

	* ext/socket/init.c (rsock_init_sock): check FD after validating
	* test/socket/test_basicsocket.rb (test_for_fd): new
	  [ruby-core:72418] [Bug #11854]

Mon Dec 21 21:29:45 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* variable.c (struct ivar_update): rename "extended" to "iv_extended"
	  to avoid name conflict with /usr/include/floatingpoint.h on
	  Solaris. [Bug #11853] [ruby-dev:49448]

Mon Dec 21 12:15:32 2015  Kimura Wataru  <kimuraw@i.nifty.jp>

	* test/ruby/test_io.rb: handled rlimit value same as r52277
	  [Bug #11852][ruby-dev:49446]

Mon Dec 21 10:21:22 2015  Ilya Vassilevsky <vassilevsky@gmail.com>

	* lib/net/http.rb (open_timeout): update default value in RDoc
	  [ruby-core:72413]

Mon Dec 21 10:18:46 2015  Kazuki Yamaguchi  <k@rhe.jp>

	* vm_backtrace.c (rb_profile_frames): ignore ifunc frames as it
	  did before.  [ruby-core:72409] [Bug #11851]

Mon Dec 21 09:33:17 2015  Karol Bucek  <kares@users.noreply.github.com>

	* ext/openssl/lib/openssl/ssl.rb (OpenSSL::SSL::SSLSocket): fix
	  NotImplementedError typo.  [Fix GH-1165]

Sun Dec 20 20:54:51 2015  Takashi Kokubun  <takashikkbn@gmail.com>

	* cgi/escape/escape.c: Optimize CGI.escapeHTML for
	  ASCII-compatible encodings.  [Fix GH-1164]

Sun Dec 20 15:36:46 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/erb.rb: revert r53123. It breaks compatibility like thor and
	  rspec-rails.
	  We should try with Ruby 2.4 or 3.0.
	  [Bug #11842][ruby-core:72374]
	* lib/rdoc/erb_partial.rb: ditto.
	* template/verconf.h.tmpl: ditto.

Sun Dec 20 11:43:31 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): allow here documents in labeled
	  argument.  [ruby-core:72396] [Bug #11849]
